[package]
name = "aocmd-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
html2md = "0.2.14"
reqwest = { version = "0.11.22", features = ["rustls"] }
scraper = "0.18.1"
tokio = { version = "1.34.0", features = ["full"] }
