[package]
name = "aocmd-dl"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Barnes"]
license = "MIT"
description = "A command line tool for downloading Advent of Code puzzle text as Markdown."
readme = "README.md"
repository = "https://github.com/dacbd/aocmd-dl"
homepage = "https://github.com/dacbd/aocmd-dl"
keywords = ["cli", "AoC", "html-to-markdown", "advent-of-code"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
html2md = "0.2.14"
reqwest = { version = "0.11.22", features = ["rustls"] }
scraper = "0.18.1"
tokio = { version = "1.34.0", features = ["full"] }
